入力されてない時の処理

--- a/pppppp/View/CreatePoint/HealthDataView.storyboard
+++ b/pppppp/View/CreatePoint/HealthDataView.storyboard
@@ -106,6 +106,9 @@
                                             <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="recordExerciseButton" destination="9Dv-30-eAN" eventType="touchUpInside" id="ktI-zJ-87y"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter exercise time." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTX-mp-TUU">
                                         <rect key="frame" x="24" y="116" width="232" height="40"/>
