--- a/pppppp/View/AuthView/FirstView.storyboard
+++ b/pppppp/View/AuthView/FirstView.storyboard
@@ -35,19 +35,29 @@
                                     <action selector="sceneEmailSignUpButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="OBr-sl-oAM"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morflax-studio-18" translatesAutoresizingMaskIntoConstraints="NO" id="Qqn-NF-m7a">
-                                <rect key="frame" x="-77" y="-58" width="634" height="884"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 2" translatesAutoresizingMaskIntoConstraints="NO" id="Qqn-NF-m7a">
+                                <rect key="frame" x="-39" y="255" width="468" height="334"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="334" id="zB4-Bx-Eqk"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sanitas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pak-yg-FHv">
+                                <rect key="frame" x="132" y="213" width="126" height="42"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FMb-IX-akA" secondAttribute="trailing" constant="32" id="D2j-yU-t6i"/>
-                            <constraint firstAttribute="trailing" secondItem="Qqn-NF-m7a" secondAttribute="trailing" constant="-167" id="IER-Jx-xtS"/>
+                            <constraint firstItem="Qqn-NF-m7a" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="Ge3-Sq-5Mf"/>
                             <constraint firstItem="FMb-IX-akA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="Lm3-Kv-drU"/>
-                            <constraint firstItem="Qqn-NF-m7a" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="-58" id="TVI-rz-wUg"/>
-                            <constraint firstItem="Qqn-NF-m7a" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-77" id="Tzg-d7-Nog"/>
-                            <constraint firstAttribute="bottom" secondItem="Qqn-NF-m7a" secondAttribute="bottom" constant="18" id="gYD-cC-Nhb"/>
+                            <constraint firstItem="Pak-yg-FHv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="NXd-J3-d9f"/>
+                            <constraint firstItem="Qqn-NF-m7a" firstAttribute="top" secondItem="Pak-yg-FHv" secondAttribute="bottom" id="dIp-bU-cn4"/>
+                            <constraint firstAttribute="trailing" secondItem="Qqn-NF-m7a" secondAttribute="trailing" constant="-39" id="eKT-sY-jKc"/>
+                            <constraint firstItem="Qqn-NF-m7a" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-39" id="pGk-Yz-EZp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="48" id="qSH-gE-wn0"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6GM-5e-cT7" secondAttribute="trailing" constant="32" id="t7c-Mm-rTZ"/>
                             <constraint firstItem="FMb-IX-akA" firstAttribute="top" secondItem="6GM-5e-cT7" secondAttribute="bottom" constant="24" id="xAn-rI-KsE"/>
@@ -65,7 +75,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="morflax-studio-18" width="1605" height="1374"/>
+        <image name="Group 2" width="1474" height="826"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
