--- a/pppppp/View/AuthView/SignInWithApple/FirstView.storyboard
+++ b/pppppp/View/AuthView/SignInWithApple/FirstView.storyboard
@@ -18,23 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FMb-IX-akA">
-                                <rect key="frame" x="32" y="714" width="326" height="48"/>
+                                <rect key="frame" x="32" y="682" width="326" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="gmm-3u-05W"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GM-5e-cT7">
-                                <rect key="frame" x="32" y="642" width="326" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="gqL-fx-fDl"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
-                                <connections>
-                                    <action selector="sceneEmailSignUpButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="OBr-sl-oAM"/>
-                                </connections>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 2" translatesAutoresizingMaskIntoConstraints="NO" id="Qqn-NF-m7a">
                                 <rect key="frame" x="-39" y="255" width="468" height="334"/>
                                 <constraints>
@@ -47,6 +36,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlK-eS-eaB">
+                                <rect key="frame" x="38" y="746" width="314" height="33.333333333333371"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="envelope.fill" catalog="system" title="Sign in with Email(Beta User Only)" imagePadding="8">
+                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                    <color key="baseForegroundColor" white="1" alpha="0.47999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="sceneEmailSignUpButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="QpR-5k-I4Q"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -55,18 +55,16 @@
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="Ge3-Sq-5Mf"/>
                             <constraint firstItem="FMb-IX-akA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="Lm3-Kv-drU"/>
                             <constraint firstItem="Pak-yg-FHv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="NXd-J3-d9f"/>
+                            <constraint firstItem="xlK-eS-eaB" firstAttribute="top" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="16" id="WUE-tG-M9E"/>
+                            <constraint firstItem="xlK-eS-eaB" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="adP-cx-dgB"/>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="top" secondItem="Pak-yg-FHv" secondAttribute="bottom" id="dIp-bU-cn4"/>
                             <constraint firstAttribute="trailing" secondItem="Qqn-NF-m7a" secondAttribute="trailing" constant="-39" id="eKT-sY-jKc"/>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-39" id="pGk-Yz-EZp"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="48" id="qSH-gE-wn0"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6GM-5e-cT7" secondAttribute="trailing" constant="32" id="t7c-Mm-rTZ"/>
-                            <constraint firstItem="FMb-IX-akA" firstAttribute="top" secondItem="6GM-5e-cT7" secondAttribute="bottom" constant="24" id="xAn-rI-KsE"/>
-                            <constraint firstItem="6GM-5e-cT7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="xM8-eP-a2L"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="80" id="qSH-gE-wn0"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="AppleLoginButtonView" destination="FMb-IX-akA" id="Em4-Ub-oXn"/>
-                        <outlet property="sceneEmailSignUpButtonLayout" destination="6GM-5e-cT7" id="UXb-tP-Axi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -76,6 +74,7 @@
     </scenes>
     <resources>
         <image name="Group 2" width="1474" height="826"/>
+        <image name="envelope.fill" catalog="system" width="128" height="93"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
